<resources>
    <string name="app_name">RecyclerView</string>
    <string name="nama">Nama</string>
    <string name="data_pemain_mancester_united">Data Pemain Mancester United</string>
    <string name="data_pemain_rrq">Data Pemain RRQ</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="name">Nama :</string>
    <string name="albert">Albert</string>
    <string name="posisi">Posisi</string>
    <string name="jungler">Jungler</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="bali">Bali</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="_8_januari_2004">8 Januari 2004</string>
    <string name="close">Close</string>
    <string name="rrq_hoshi">RRQ Hoshi</string>
    <string name="ultraman">Ultraman</string>
    <string name="universitas_pelita_bangsa">Universitas Pelita Bangsa</string>
    <string name="ti_19_b1">Ti. 19. B1</string>
    <string name="ultramansaga_gmail_com">ultramansaga@gmail.com</string>
    <string name="_0877_0998_9988">0877-0998-9988</string>
    <string name="kp_ultra_desa_ultramilk_kec_ultraflu_kab_ultramind_planet_ultra">Kp. Ultra Desa Ultramilk Kec. Ultraflu Kab. Ultramind Planet Ultra</string>
    <string name="universitas_pahlawan_cahaya">Universitas Pahlawan Cahaya</string>
    <string name="back_to_main_page">Back To Main Page</string>

</resources>