<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/image_pemain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:src="@drawable/albert"
        />
    <TextView
        android:id="@+id/textdatapribadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/data_pribadi"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama" />

        <TextView
            android:id="@+id/txtNamaPemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0A0B0A"
            android:text="@string/albert" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_lahir" />

        <TextView
            android:id="@+id/txtTempatLahirPemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0A0B0A"
            android:text="@string/bali" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir" />

        <TextView
            android:id="@+id/txtTanggalLahirPemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0A0B0A"
            android:text="@string/_8_januari_2004" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posisi" />

        <TextView
            android:id="@+id/txtPosisiPemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0A0B0A"
            android:text="@string/jungler" />
    </LinearLayout>

    <Button
        android:id="@+id/btnclose"
        android:text="@string/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

</LinearLayout>